--- a/style.css
+++ b/style.css
@@ -635,7 +635,7 @@ margin-top: 5px;
     position: relative;
 }
 body {
-    display: none !important;
+    display: block !important;
 }
 
 .hero {
